adding Koki info

--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@ After a successful first edition, we are excited to present a second edition of 
                   <a href="https://luminohope.org/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/tbd.png" alt=""> 
+                           src="img/koki.jpg" alt=""> 
 					
                  </div></td>
                 <td><b>Koki Nagano</b><br/>
-							  <b>Title: </b>TBD<br/>
-				<b>Bio: </b>TBD<br/>
-							  <b>Abstract: </b>TBD<br/>
+							  <b>Title: </b>AI-Driven Photorealistic Human Digitization<br/>
+				<b>Bio: </b>Koki Nagano is a Senior Research Scientist at NVIDIA Research. He works at the intersection of Graphics and AI with focus on achieving realistic digital humans. He has worked on a 3D display that allows an interactive conversation with a holographic projection of Holocaust survivors to preserve visual archives of the testimonies for future classrooms. His work on skin microgeometry synthesis has helped create digital characters in blockbuster movies such as “Ready Player One” and “Blade Runner 2049” as well as the open source ones such as “Digital Mike” and “Digital Emily 2.0”. His work on photorealistic human digitization has been shown in places including World Economic Forum, EmTech, TEDxCharlottesville, and SIGGRAPH Real-time Live!. His work has also led to the development of the state of the art Deepfake detection technology in collaboration with top media forensics experts. He was named a Google PhD Fellow 2016 and his research has won the DC Expo 2015 Special Prize. He previously worked for Pinscreen as Principal Scientist. He obtained his PhD from the University of Southern California advised by Dr. Paul Debevec at USC ICT and his BE from the Tokyo Institute of Technology.<br/>
+							  <b>Abstract: </b>It is unquestionable that photorealistic digital humans will become ubiquitous in society, whether in the form of AI assistants or as fictional characters on viral media or as our own virtual self for social interactions. While currently creating a convincing digital human involves an expensive and lengthy procedure from a team of VFX experts, in the near future, anyone will be able to create photorealistic human content at their fingertips. In this talk, I present techniques to create photorealistic digital humans using 3D computer graphics and deep learning. Using the Light Stage high-fidelity capture systems, I describe how we can achieve realistic rendering of an animated face in real-time that is accurate to the level of microns. By combining cutting edge 3D graphics and deep generative models, I present methods to model, animate, and render photorealistic 3D humans from minimal inputs to bring avatar digitization to everyone. In particular I will showcase a deep generative model that can synthesize and animate in real-time a photorealistic 3D face of anyone from a single selfie. While these are key  technologies for the creation of consumer accessible virtual beings, they can also be misused for malicious purposes such as the spread of disinformation. To that end, I will discuss a method to detect advanced media forgeries such as deepfakes and our efforts to fight against them. <br/>
                 </td>
               </tr>
                    <tr>
