--- a/index.html
+++ b/index.html
@@ -327,10 +327,12 @@ After a successful first edition, we are excited to present a second edition of 
 					
                  </div></td>
                 <td><b>Wan-Chun Alex Ma</b><br/>
-							  <b>Title: </b>TBD<br/>
+							  <b>Title: </b>Realism for Digital Faces: Modeling Appearance and Motion<br/>
 		<b>Bio: </b>Wan-Chun Alex Ma is a senior research scientist at ByteDance. His research interests include: digital human, facial animation, performance capture, photogrammetry, image-based modeling and rendering, geometry processing, and machine learning. He has been affiliated with Google, Activision Blizzard, ETH Zurich, Weta Digital, and USC Institute for Creative Technologies. His career has spanned more than a decade across many fields including visual effects, video game development, and augmented reality. As a Senior Software Engineer at Google, he led the research and development of a new lighting estimation technique that promotes realism in augmented reality. He also held research scientist positions at both Weta Digital and Activision Blizzard, where his work on facial performance capture contributed to motion pictures and video games, including the Hobbit Trilogy, Iron Man 3, the recent Planet of the Apes series, Furious 7, The BFG, and the Call of Duty series. His works have been published at conferences such as SIGGRAPH, SIGGRAPH Asia, Eurographics, EGSR, SGP, and I3D. Ma received his Ph.D. degree from National Taiwan University in 2008. His dissertation on the Polarized Spherical Gradient Illumination facial appearance capture system has been used extensively for creating photoreal digital actors by the visual effects industry. This work was later recognized by the AMPAS with the Academy Award for Technical Achievement in 2019.</br>
 
-							  <b>Abstract:</b>TBD.<br/>
+							  <b>Abstract: </b>Nowadays digital humans are widely adopted in emerging areas such as extended reality, virtual production and gaming. We have
+witnessed in various applications that creating a completely realistic digital human face is not an impossible task anymore. In this talk we will examine technical key issues and solutions on modeling the appearance and motion of digital faces in the history of digital face creation, along with examples from prior feature film productions or academia works. We will also look at what are the next areas we should address more for increasing the realism for digital faces in the near
+future.<br/>
                 </td>
               </tr>
                   <tr>
