adding alex's picture

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ After a successful first edition, we are excited to present a second edition of 
                   <a href="https://www.linkedin.com/in/wmafx/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/tbd.png" alt=""> 
+                           src="img/alex.jpg" alt=""> 
 					
                  </div></td>
                 <td><b>Wan-Chun Alex Ma</b><br/>
