fixing minor layout issues

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="site-branding">
         <div class="wrap">
           <h1 class="site-title"><a href="#INTRODUCTION" rel="home">CRDH : From Capture to Rendering of Digital Humans for AR/VR</a></h1>
-          <p class="site-description">December 14-18 @ 3rd IEEE International Conference on AIVR 2020 in Utrecht, The Netherlands.</p>
+          <p class="site-description">December 16 @ 3rd IEEE International Conference on AIVR 2020 in Utrecht, The Netherlands.</p>
         </div><!-- .wrap -->
       </div><!-- .site-branding -->
 
@@ -81,11 +81,11 @@
             <li id="homeitem" class="menu-item"><a href="#HOME">HOME</a></li>
             <li id="introductionitem" class="menu-item"><a href="#INTRODUCTION">INTRODUCTION</a></li>
             <li id="newsitem" class="menu-item"><a href="#NEWS">NEWS</a></li>
-            <li id="locationsitem" class="menu-item"><a href="#LOCATION">LOCATION & REGISTRATION</a></li>
+            <li id="locationsitem" class="menu-item"><a href="#LOCATION">REGISTRATION & CONNECTION</a></li>
             <!--<li id="papersitem" class="menu-item"><a href="#SUBMISSION">SUBMISSION</a></li>
             <li id="rightsitem" class="menu-item"><a href="#RIGHTS">RIGHTS</a></li> -->
             <li id="workshopitem" class="menu-item"><a href="#WORKSHOPPROGRAM">PROGRAM</a></li>
-            <li id="datesitem" class="menu-item"><a href="#IMPORTANTDATES">DATES</a></li>
+            <!--<li id="datesitem" class="menu-item"><a href="#IMPORTANTDATES">DATES</a></li>-->
             <!--
             <li id="posteritem" class="menu-item"><a href="#POSTERS">POSTERS</a></li>
             -->
@@ -164,12 +164,11 @@ After a successful first edition, we are excited to present a second edition of 
       <div>
         <div>
           <h2 id="LOCATION" class="elementor-heading-title">
-            LOCATION & REGISTRATION</h2>
+            REGISTRATION & CONNECTION</h2>
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
-            The workshop will take place during the IEEE 3rd International Conference on Artificial Intelligence & Virtual Reality (AIVR 2020). Due to the COVID-19 situation, the conference and the workshop will be held fully online. Check the <b><a href="http://aivr.science.uu.nl/" target="_blank">conference website</a></b> for relevant information. <b><a href=https://aivr.science.uu.nl/aivr_registration.html>Registration</a></b> must be done from the main conference website.
-
+            The workshop will take place during the IEEE 3rd International Conference on Artificial Intelligence & Virtual Reality (AIVR 2020). Due to the COVID-19 situation, the conference and the workshop will be held fully online. Information regarding the conferencing platform will be provided soon. <b><a href=https://aivr.science.uu.nl/aivr_registration.html>Registration</a></b> must be done from the main conference website.
             <br><br>
           </div>
         </div>
@@ -238,7 +237,7 @@ After a successful first edition, we are excited to present a second edition of 
 -->
       
 	  <!-- Important Dates -->
-      <div>
+      <!--<div>
         <div>
           <h2 id="IMPORTANTDATES" class="elementor-heading-title">IMPORTANT DATES</h2>
         </div>
@@ -259,7 +258,7 @@ After a successful first edition, we are excited to present a second edition of 
                 <td>Camera-ready Deadline:</td>
                 <td><b>October 30<sup>th</sup>, 2020</b></td>
               </tr>-->
-              <tr>
+             <!-- <tr>
                 <td>Workshop date:</td>
                 <td><b>December 16<sup>th</sup>, 2020
                </b></td>
@@ -267,7 +266,7 @@ After a successful first edition, we are excited to present a second edition of 
             </table>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Workshop Program -->
       <div>
@@ -294,7 +293,6 @@ After a successful first edition, we are excited to present a second edition of 
                 <li>3:00 - 3:30 Invited Talk: Mario Botsch</li> 
 	      </ul>
             </div>
-		<br /><br/>
           <b>5:30 - 7:30 Session 3: Workshop CRHD (part 2)</b>       
 	<div style="margin: 0 50px">
               <ul>
