--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ After a successful first edition, we are excited to present a second edition of 
                 <li>3:00 - 3:30 Invited Talk: Yajie Zhao</li> 
 	      </ul>
             </div>
-          <b>5:30 - 7:30 Session 3: Workshop CRHD (part 2)</b>       
+          <b>5:30 - 7:30 CET Session 3: Workshop CRHD (part 2)</b>       
 	<div style="margin: 0 50px">
               <ul>
 		<li>5:30 - 5:40 Introduction</li>
