added Yajie's info

--- a/index.html
+++ b/index.html
@@ -425,9 +425,10 @@ future.<br/>
 					
                  </div></td>
                 <td><b>Yajie Zhao</b><br/>
-							  <b>Title: </b>TBD<br/>
-				<b>Bio: </b>TBD<br/>
-							  <b>Abstract: </b>TBD<br/>
+							  <b>Title: </b>Next Generation lifelike Avatar Creation<br/>
+				<b>Bio: </b>Yajie Zhao is a computer scientist at USC Institute for Creative Technologies focusing on human capturing, reconstruction, and digitization. Previously, she spent three years at USC-ICT as a postdoctoral researcher and research associate in the Vision and Graphics Lab lead by Dr.
+ Hao Li. She obtained her Ph.D. from the University of Kentucky under the supervision of Dr. Ruigang Yang.<br/>
+							  <b>Abstract: </b>High-fidelity avatar creation for films and games is tied with complex capture equipment, massive data, a long production cycle, and intensive manual labor by a production team. And it may still be in the notorious Uncanny Valley. In this talk, we will explore how to produce a lifelike avatar in hours using only an online video sequence. We will show how to leverage deep learning networks to accelerate and simplify the industrial avatar production procedure from data capturing to animation. And bring photorealism to the next level!<br/>
                 </td>
               </tr>
             </table>
