adding Mario's bio, title and abtract

--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@ future.<br/>
                   <a href="https://graphics.uni-bielefeld.de/people/botsch_mario/botsch_mario.html/" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/tbd.png" alt=""> 
+                           src="img/mario.png" alt=""> 
 					
                  </div></td>
                 <td><b>Mario Botsch</b><br/>
-							  <b>Title: </b>TBD<br/>
-				<b>Bio: </b>TBD<br/>
-							  <b>Abstract: </b>TBD<br/>
+							  <b>Title: </b>Reconstructing Realistic Avatars with(out) a Complex Photogrammetry Scanner<br/>
+				<b>Bio: </b>Mario Botsch is professor for Computer Science at TU Dortmund University, where he is heading the Chair of Computer Graphics. The focus of his research is the efficient acquisition, optimisation, animation, and visualisation of 3D geometric objects. He is currently investigating 3D-scanning and motion capturing of humans, modelling and animation of virtual characters, and real-time visualisation in interactive virtual reality scenarios. <br/>
+							  <b>Abstract: </b>Generating realistic virtual avatars used to require (1) a complex photogrammetry scanner consisting of many DSLR cameras as well as (2) a time-consuming and labour-intensive reconstruction and rigging process. In this talk I will present our recent efforts for reducing both requirements. First, I will show how to reconstruct realistic avatars in less than 10 minutes with only a small amount of manual work, however, still using a complex photogrammetry setup. In the second part, we reduce hardware costs by two orders of magnitude by replacing the multi-camera photogrammetry rig by simple monocular RGB videos taken with a standard smartphone. From those videos we reconstruct realistic avatars in a fully automatic manner, in just about 20 minutes, and at a visual quality close to the complex scanner setup.<br/>
                 </td>
               </tr>
                    <tr>
