Changing Keynote speaker Marco for Gerard

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@ After a successful first edition, we are excited to present a second edition of 
         </div>
         <div class="elementor-widget-text-editor">
           <div class="elementor-text-editor">
+            [12/09/2020] Minor change in the agenda. Unfortunately Marco Romeo will not be able to attend the workshop. Gerard Pons-Moll will be the keynote speaker of the first session.
+            <br><br>
+          </div>
+          <div class="elementor-text-editor">
             [11/01/2020] Our two fantastic keynote speakers are Wan-Chun Alex Ma and Marco Romeo!
             <br><br>
           </div>
@@ -338,16 +342,16 @@ future.<br/>
                <td class="elementor-widget-image-box">
                 <div class="elementor-image-box-wrapper">
 
-                  <a href="https://www.linkedin.com/in/marcoromeoin/" target="_blank">
+                  <a href="https://virtualhumans.mpi-inf.mpg.de/people/pons-moll.html" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
-                           src="img/marco.jpg" alt=""> 
+                           src="img/gerard.png" alt=""> 
 					
                  </div></td>
-                <td><b>Marco Romeo</b><br/>
-							  <b>Title: </b>Simulating Digital Humans and Creatures: current techniques and future<br/>
-			<b>Bio: </b>Marco Romeo is the founder and director of INBIBO, a startup focused on software products for Digital Creatures and Production Workflows. He worked for various Visual Effects companies as Head of Research, Product Owner and Lead Software Engineer, contributing to several films and series like The Lion King, Game of Thrones, The Jungle Book and Jurassic World: Fallen Kingdom. His Academic background includes a PhD in Media, Communication and Information Technology, directing the Master in Computer Animation at Universitat Pompeu Fabra and publications in high-profile conferences and scientific journals. <br />
-							  <b>Abstract: </b>Digital Humans and Creatures are now prominent in our culture. Achieving realistic results in visual effects for films is achieved using many techniques that still are limited by not offering an interactive and easy-to-setup solution. With realistic Digital Humans and Creatures permeating the future of video games, communication, social networks and virtual reality, fast interactive simulation of realistic muscles and skin behaviour has become a priority. In this talk, Marco Romeo will present the techniques that are currently in use to create compelling Digital Humans and Creatures, discussing how new methods and findings will help the future of real-time interactive solutions. The presentation will be supported by demos of results achieved at INBIBO.<br/>
+                <td><b>Gerard Pons-Moll</b><br/>
+							  <b>Title: </b>TBD<br/>
+			<b>Bio: </b>TBD<br />
+							  <b>Abstract: </b>TBD<br/>
                 </td>
               </tr>
                    
