--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ After a successful first edition, we are excited to present a second edition of 
               <ul>
               
                 <li>1:30 - 1:40 Introduction</li>
-                <li>1:40 - 2:30 Keynote Speaker: Marco Romeo</li>
+                <li>1:40 - 2:30 Keynote Speaker: Gerard Pons-Moll</li>
                 <li>2:30 - 3:00 Invited Talk: Adnane Boukhayma</li>
                 <li>3:00 - 3:30 Invited Talk: Yajie Zhao</li> 
 	      </ul>
