--- a/index.html
+++ b/index.html
@@ -349,9 +349,25 @@ future.<br/>
 					
                  </div></td>
                 <td><b>Gerard Pons-Moll</b><br/>
-							  <b>Title: </b>TBD<br/>
-			<b>Bio: </b>TBD<br />
-							  <b>Abstract: </b>TBD<br/>
+							  <b>Title: </b>Democratizing
+ Digital Humans<br/>
+			<b>Bio: </b>Pons-Moll is the head of the Emmy Noether independent research group "Real Virtual Humans", senior researcher at the Max Planck for Informatics (MPII) in Saarbrücken, Germany, and will join the University of Tübingen as full professor in March of 2021.
+His research lies at the intersection of computer vision, computer graphics and machine
+ learning -- with special focus on analyzing people in videos, and creating virtual human models by "looking" at real ones. His research has produced some of the most advanced statistical human body models of pose, shape, soft-tissue and clothing (which are
+ currently used for a number of applications in industry and research), as well as algorithms to track and reconstruct 3D people models from images, video, depth, and IMUs.
+His work has received several awards including the prestigious Emmy Noether
+ Grant (2018), a Google Faculty Research Award (2019), a Facebook Reality Labs Faculty Award (2018), and recently the German Pattern Recognition Award (2019), which is given annually by the German Pattern Recognition Society to one outstanding researcher in
+ the fields of Computer Vision and Machine Learning. His work got Best Papers Awards BMVC’13, Eurographics’17, 3DV'18 and CVPR'20 and has been published at the top venues and journals including CVPR, ICCV, Siggraph, Eurographics, 3DV, IJCV and PAMI. He served
+ as Area Chair for the major conferences in vision such as ECCV, CVPR, 3DV, etc<br />
+							  <b>Abstract: </b>Digitizing
+ human beings would redefine the way we think and communicate (with other humans and with machines), and it is necessary for many applications -- for example, to transport people into virtual and augmented reality, for entertainment and special effects in movies,
+ and for medicine and psychology. 
+
+Digital humans obtained with state of the art VFX are of astonishing realism
+ and quality. However, generating them is a time consuming and expensive process which requires specialised equipment, expert knowledge and manual labor, limiting their use to specialists.
+In this talk, I will describe the work we are conducting in my lab to capture and
+ learn digital humans from consumer grade sensors like RGB cameras, which are usable and accessible to everyone.
+<br/>
                 </td>
               </tr>
                    
