--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ After a successful first edition, we are excited to present a second edition of 
             [11/01/2020] Our two fantastic keynote speakers are Wan-Chun Alex Ma and Marco Romeo!
             <br><br>
           </div>
-          <div class="elementor-text-editor">
+          <!-- <div class="elementor-text-editor">
             [07/16/2020] <a href="https://easychair.org/my/conference?conf=ieeeaivr2020">Submission website</a> is opened
             <br><br>
-          </div>
+          </div> -->
           <div class="elementor-text-editor">
             [07/08/2020] The workshop will be a <a href="https://aivr.science.uu.nl/aivr_message.html">live event</a>
             <br><br>
@@ -285,7 +285,6 @@ After a successful first edition, we are excited to present a second edition of 
           </div>-->
 
           <b>Workshop Date: December 16, 2020</b>
-		   <br>Tentative Program:<br>
 							  
 	 <b>1:30pm - 3:30pm CET Session 1: Workshop CRHD (part 1)</b>
              <div style="margin: 0 50px">
