adding line break

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ After a successful first edition, we are excited to present a second edition of 
             <br><br>
           </div>-->
 
-          <b>Workshop Date: December 16, 2020</b>
+          <b>Workshop Date: December 16, 2020</b><br/>
 							  
 	 <b>1:30pm - 3:30pm CET Session 1: Workshop CRHD (part 1)</b>
              <div style="margin: 0 50px">
