fixing mario's web address

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ In this talk, I will describe the work we are conducting in my lab to capture an
                <td class="elementor-widget-image-box">
                 <div class="elementor-image-box-wrapper">
 
-                  <a href="https://graphics.uni-bielefeld.de/people/botsch_mario/botsch_mario.html/" target="_blank">
+                  <a href="https://graphics.uni-bielefeld.de/people/botsch_mario/botsch_mario.html" target="_blank">
                    <div class="elementor-image-box-img">
                       <img style="margin: auto; height: 150px; max-width: 150px;border-radius: 50%;"
                            src="img/mario.png" alt=""> 
